<resources>
    <string name="app_name">eletricCar</string>
    <string name="title">EletricCar</string>
    <string name="cars">Cars</string>
    <string name="favorite">Favorites</string>
    <string name="price">Price</string>
    <string name="battery">Battery</string>
    <string name="power">Power</string>
    <string name="refill">Refill</string>
    <string name="price_kwh">Price per Kwh</string>
    <string name="mileage">Mileage</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_autonomy">Calculate Autonomy</string>
    <string name="no_wifi">Sorry, no wi-fi conection</string>
    <string name="response_error">Something get wrong, try it later</string>
    <string name="saved_calc">saved_calc</string>
</resources>